--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header>
         <img
           src="logo_place_header.svg"
-          alt="нет дотсупа к картинке"
+          alt="нет доcтупа к картинке "
           class="logo"
         />
 
@@ -25,7 +25,7 @@
 
         <img
           src="two_again.png"
-          alt="нет дотсупа к картинке"
+          alt="нет доступа к картинке"
           class="main-illustration"
         />
 
