--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.css" />
-    <title>sprint-1</title>
+    <title>sprint</title>
   </head>
   <body>
     <div class="page">
       <header>
         <img
           src="logo_place_header.svg"
-          alt="нет доcтупа к картинке "
+          alt="нет доcтупа к картинке"
           class="logo"
         />
 
